Harden encrypted archive restore for Android 8 compatibility